tests/dev_server/errors/stories/js_classic_throw/main.js
// before: comment
// before: to
// before: increase line numbers
throw new Error("here")
// after: comment
// after: to
// after: increase line numbers
